--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ layout: default
             <div class="banner-main-home">                                
                 <div class="banner-main-home-text">
                     <div class="heading">
-                        <h1>ACCORD</h1>
-                        <p class="text-uppercase">Proin gravida nibhISI</p>
+                        <h1>Youssef Sabbagh</h1>
+                        <p class="text-uppercase">Cuadro 1</p>
                     </div>
                     <div class="desc">
-                        <p>This is free Bootstrap v3.3.6 website theme brought to you by templatemo. Feel free to use it. Please tell your friends about it. Images are provided by <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
-                        <button type="button" class="">SAGITIS SELIT</button>
+                        <p>Esta es una pagina base modificada por mi, las fotos usadas son proporcionadas por <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
+                        <button type="button" class="">Conocer mas</button>
                     </div>
                 </div>
                 <img src="assets/images/home-img-1.png" alt="Image" class="img-responsive">
