--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ layout: default
                 <div class="banner-main-home-text">
                     <div class="heading">
                         <h1>Youssef Sabbagh</h1>
-                        <p class="text-uppercase">Cuadro 1</p>
+                        <p class="text-uppercase">Servicios</p>
                     </div>
                     <div class="desc">
                         <p>Esta es una pagina base modificada por mi, las fotos usadas son proporcionadas por <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
-                        <button type="button" class="">Conocer mas</button>
+                        <button type="button" class="">Ver Servicios</button>
                     </div>
                 </div>
                 <img src="assets/images/home-img-1.png" alt="Image" class="img-responsive">
@@ -32,13 +32,13 @@ layout: default
                 </div>
                 <div class="info float-container">
                     <div class="col-sm-12 london-title">
-                        <h3 class="text-uppercase">Proin gravida nibhvel</h3>
-                        <h4 class="text-uppercase">mauris vitae erat</h4>
+                        <h3 class="text-uppercase">Desarrollo Web</h3>
+                        <h4 class="text-uppercase">Cursos</h4>
                     </div>
-                    <p>Sean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. </p><hr />
+                    <p>Ofrecemos cursos en sitio o en nuestras instalaciones. </p><hr />
                     <div class="col-sm-12 location-main"> 
                         <div class="pull-left location">
-                            <i class="fa fa-map-marker fa-2x"></i><span>LONDON</span>
+                            <i class="fa fa-map-marker fa-2x"></i><span>Cursos</span>
                         </div>
                         <div class="pull-right user-icons">
                             <a href="#"><i class="fa fa-star fa-2x"></i></a>
@@ -57,13 +57,13 @@ layout: default
                 </div>
                 <div class="info float-container">
                     <div class="col-sm-12 london-title paris-title">
-                        <h3 class="text-uppercase">Proin gravida nibhvel</h3>
-                        <h4 class="text-uppercase">mauris vitae erat</h4>
+                        <h3 class="text-uppercase">Estrategias de Mercadeo</h3>
+                        <h4 class="text-uppercase">Planes</h4>
                     </div>
-                    <p>Sean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. </p><hr />
+                    <p>Lo ayudamos con los a desarrolar los planes de mercado que permitan mejorar los resultado. </p><hr />
                     <div class="col-sm-12 location-main"> 
                         <div class="pull-left location location2">
-                            <i class="fa fa-map-marker fa-2x"></i><span>PARIS</span>
+                            <i class="fa fa-map-marker fa-2x"></i><span>Marketing</span>
                         </div>
                         <div class="pull-right user-icons">
                             <a href="#"><i class="fa fa-star fa-2x"></i></a>
@@ -80,33 +80,33 @@ layout: default
             <div class="box bottom-main">
                 <div class="info float-container">
                     <div class="col-sm-12 bottom-title">
-                        <h3 class="text-uppercase">Proin gravida nibhvel</h3>
-                        <h4 class="text-uppercase">mauris vitae erat</h4>
+                        <h3 class="text-uppercase">Clientes</h3>
+                        <h4 class="text-uppercase">algunos de nuestros clientes leales</h4>
                     </div>
                     <div class="row">
                         <div class="col-xxs-12 col-xs-6 col-sm-6 col-md-4 col-lg-4">
                             <div class="bottom-img">
                                 <img src="assets/images/home-img-4.jpg" alt="Image">
-                                <p class="first">Sollicitudin nibh</p>    
+                                <p class="first">IML</p>    
                             </div>                                      
                         </div>
                         <div class="col-xxs-12 col-xs-6 col-sm-6 col-md-4 col-lg-4">
                             <div class="bottom-img">
                                 <img src="assets/images/home-img-5.jpg" alt="Image">
-                                <p class="second">duis sedio amiet</p>    
+                                <p class="second">YYTs</p>    
                             </div>                                      
                         </div>
                         <div class="col-xxs-12 col-xs-6 col-sm-6 col-md-4 col-lg-4">
                             <div class="bottom-img">
                                 <img src="assets/images/home-img-6.jpg" alt="Image">
-                                <p class="third">Nec sagittis seim</p>    
+                                <p class="third">Reinaldo</p>    
                             </div>                                      
                         </div>
                     </div>
-                    <p class="bottom-desc">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. </p><hr />
+                    <p class="bottom-desc">descripcion asociada a los clientes. </p><hr />
                     <div class="col-sm-12 location-main"> 
                         <div class="pull-right bottom-user">
-                            <a href="#"><i class="fa fa-caret-right"></i><span>READ MORE</span></a>
+                            <a href="#"><i class="fa fa-caret-right"></i><span>Leer Mas</span></a>
                         </div>
                     </div>
                 </div>
